202411161900 - creates dev container with cc65 and build tools, rudimentary makefile setup
202411171759 - clones down minipro, builds deb for it, and installs it
202411171848 - moved c65 firmware and rules into child folder .c65
202411172114 - paths fully defined in makefile, so moving them in future should be easier
202411181754 - moved minipro build and install into a locally defined feature, removed vscode json as they are not needed

TODO:
* get make file to dynamically enumerate *.s files
* Create task to run minipro
* research how to let minipro write to plugged in usb thingie
* get minipro into its own feature containery thing