@@ -1,0 +1,2 @@
+sudo apt update
+sudo apt install cc65 build-essential build-essential -y
