@@ -1,3 +1,5 @@
+sudo apt update
+sudo apt install libusb-1.0-0-dev fakeroot debhelper dpkg-dev libb64-dev udev -y
 mkdir .tempbuild
 cd .tempbuild
 git clone https://gitlab.com/DavidGriffith/minipro.git
